--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
+.env*
 
 # typescript
 *.tsbuildinfo
@@ -41,3 +41,6 @@ app-example
 # generated native folders
 /ios
 /android
+
+# extras
+.yarn
